# tma4280

./: ps1.txt
ps1/: ps1  ps1.c
ps4/code/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ps4  sum  sum.c  sumlib.c  sumlib.h
ps4/report/: ps4.tex
